<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sleep Manager</string>
    <string name="title_section1">HOME</string>
    <string name="title_section2">STATS</string>
    <string name="title_section3">SHARE</string>
    <string name="title_section4">HELP</string>
    <string name="action_settings">Settings</string>
    <string name="alarm">Alarm</string>
    <string name="sleep">Sleep Time</string>
    <string name="force">Force Me to Sleep</string>
    <string name="tracking">Sleep Tracking</string>
    <string name="statistics">Sleep Statistics</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_sleep">Sleep</string>
    <string name="title_activity_tracking">Tracking</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_alarm_setting">Alarm Setting</string>
    <string name="firstbar">\t\tAlarm</string>
    <string name="secondbar">\t\tSleep Time</string>
    <string name="thirdbar">\t\tForce Me to Sleep</string>
    <string name="fourthbar">\t\tTracking Sleep Motion</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="ringtone">Ring Tone</string>
    <string name="captcha">Captcha</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="action_home">Home</string>
    <string name="action_add">Add</string>
    <string name="action_help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="lock_mode">"Lock Mode:"</string>
    <string name="minutes">Minutes</string>
    <string name="wake_up_time">Wake Up Time(Minutes):</string>
    <string name="yourname">His/Her Name:</string>
    <string name="emailadd">His/Her Email:</string>
    <string name="hint1">Yuchi Han</string>
    <string name="hint2">hychyck@gmail.com</string>
    <string name="byemail">Share  by  Email</string>
    <string name="app_id">285617441598754</string>
    <string name="byfb">Share On FaceBook</string>
    <string name="status">Post Status Update</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>
    <string name="equal">=</string>
    <string name="enter">Enter</string>

    <string-array name="day">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string name="title_activity_notify_alarm_received">NotifyAlarmReceivedActivity</string>
    <string name="title_activity_on_face_book">OnFaceBook</string>
    <string name="title_activity_excecution_forcing_receiver">ExcecutionForcingReceiver</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_sleep_setting">Sleep Setting</string>
    <string name="title_activity_force">Force</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lock_screen_receiver">LockScreenReceiver</string>
    <string name="title_activity_motion">Motion</string>
    <string name="title_activity_chart">Chart</string>
    <string name="title_activity_setting">Setting</string>
    <string name="help_text">When you open our app - Sleep Manager, you can see four round buttons on the home page. You can swap
         to change any page like: HOME, STATS, SHARE and HELP.\n\nFor the HOME page, you can choose alarm time, sleep time, force me to sleep and tracking sleep motion functionalities.\n\nFor
          STATS, you can see the graphs of sleep motion records. The motion data can be presented by the points on the graph.\n\nFor 
          SHARE, you can see some bottoms that you can click them to share the data on the social networks and transfer to the social networks in the browser.\n\nFor main functionalities of this app: alarm, sleep reminder, forcing sleep and tracking sleep motion. You can
         see the alarm time showing on the alarm button. This time should be the first alarm time of your alarm list. You can choose on or off of your alarm. This button and toggle both 
         connect to our backend database. Press it, you enter the alarm list page. You can add new alarm by clicking on the “+” button on the navigation bar, and return to home page by 
         clicking home sign. New alarm will be added to the alarm list. You can press any alarm to set that specific alarm. You can set time, sound and turn-off way, like mathematical work 
         or shake by your hand heavily.\n\nFor sleep reminder, you can set this to remind you to sleep. And you can also use settings to choose functionality of each alarm to remind you. And
          this sleep reminder connects to the database that connects forcing sleep function. When the alarm sounds, the way that you have chosen to force you to sleep will be effect. The main 
          characteristic of our app is that our app can generate a random passcode to forbid users to unlock the screen. Therefore, during forcing time, users cannot use the device any more. 
          After the specific time that users set, the passcode will be changed to what users know automatically.\n\nFor tracking sleep motion, when users set an interval time, our app will
           record users’ motion during this time. The motion data will records in the database. The data can be used to draw the graph later.\n\n</string>
    <string name="title_activity_math_problem">MathProblemActivity</string>
    <string name="title_activity_snooze">Snooze</string>
    <string name="title_activity_shake">Shake</string>
    <string name="title_activity_notify_sleep_received">Notification</string>
    <string name="endtime">End Time:</string>
    <string name="starttime">Start Time:</string>
    <string name="trackingmotion">Tracking Sleep Motion:</string>
    <string name="shake">shake</string>

</resources>
