<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:textSize="30sp"
        android:text="@string/wake_up_time"/>
    
    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="460dp"
        android:textSize="30sp"
        android:text="@string/minutes"/>

    <Spinner
        android:id="@+id/timechoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/time"
        android:layout_marginLeft="385dp"/>
    
    <View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="#000000" 
		android:layout_below="@+id/time"
        android:layout_marginTop="50dp"/>
    
    <TextView
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignRight="@+id/time"
        android:layout_below="@+id/time"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:text="@string/lock_mode"/>
    
    <Spinner
        android:id="@+id/modechoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timechoose"
        android:layout_alignTop="@+id/mode"/>
    
    <View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="#000000" 
		android:layout_below="@+id/mode"
        android:layout_marginTop="50dp"/>
    
    
    <Button
        android:id="@+id/force_cancel"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="120dp"
        android:textSize="30sp"
        android:background="@drawable/savedelete"
        android:textColor="#ffffff"
        android:text="@string/cancel"/>
    
    <Button
        android:id="@+id/force_save"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="340dp"
        android:textSize="30sp"
        android:background="@drawable/savedelete"
        android:textColor="#ffffff"
        android:text="@string/save"/>
    
    </RelativeLayout> 
    
    

</LinearLayout>
