<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<!--   
<LinearLayout
	android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="60dp"
	>
	
    <Button
        android:id="@+id/share"
        android:layout_width="150dp"
        android:layout_height="fill_parent"              
        android:textSize="24sp"
        android:text="share" />

</LinearLayout>
    -->
           
    <Button
        android:id="@+id/buttonhome1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="left|center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"        
        android:textSize="24sp"
        android:padding="10dp"
        android:background="@drawable/shape"
        android:text="@string/firstbar" />
    
    <Button
        android:id="@+id/buttonhome2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="left|center_vertical"
        android:textSize="24sp"
        android:layout_alignLeft="@+id/buttonhome1"
        android:layout_below="@+id/buttonhome1"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape"
        android:text="@string/secondbar"/>

    <Button
        android:id="@+id/buttonhome3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="left|center_vertical"
        android:textSize="24sp"
        android:layout_alignLeft="@+id/buttonhome2"
        android:layout_below="@+id/buttonhome2"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape"
        android:text="@string/thirdbar"/>

    <Button
        android:id="@+id/buttonhome4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="left|center_vertical"
        android:textSize="24sp"
        android:layout_alignLeft="@+id/buttonhome3"
        android:layout_below="@+id/buttonhome3"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape"
        android:text="@string/fourthbar"/>
    
    
    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/buttonhome4"
        android:layout_alignBottom="@+id/buttonhome4"
        android:layout_alignLeft="@+id/toggleButton3"
        android:background="@drawable/toggle"
        android:textSize="20sp" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/buttonhome2"
        android:layout_alignBottom="@+id/buttonhome2"
        android:layout_alignLeft="@+id/toggleButton1"
        android:background="@drawable/toggle"
        android:textSize="20sp" />

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/buttonhome3"
        android:layout_alignBottom="@+id/buttonhome3"
        android:layout_alignLeft="@+id/toggleButton2"
        android:background="@drawable/toggle"
        android:textSize="20sp" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/buttonhome1"
        android:layout_alignBottom="@+id/buttonhome1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/toggle"
        android:textSize="20sp" />

    <com.example.time.DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonhome1"
        android:layout_alignBottom="@+id/buttonhome1"
        android:layout_marginRight="60dp"
        android:layout_toLeftOf="@+id/toggleButton1"
        android:textSize="50sp" />
    
    <com.example.time.DigitalClock
        android:id="@+id/digitalClock2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonhome2"
        android:layout_alignBottom="@+id/buttonhome2"
        android:layout_marginRight="60dp"
        android:layout_toLeftOf="@+id/toggleButton2"
        android:textSize="50sp" />

</RelativeLayout>